# signal_nest

./: .env.canary.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  openapi.json  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260711_1740-9a7c614699d8_initial_phase_1_2_schema.py  20260713_0007-dacbf2b1e915_add_durable_jobs.py  20260713_0300-b2d4e6f8a1c3_add_user_is_operator.py  20260713_0400-c3e5a7b9d1f2_add_job_lease_token.py  20260713_0500-d4f6a8c0b2e1_add_worker_registrations.py  20260713_0600-df66ff0426d2_add_worker_generation_token.py  20260714_0000-e7c2a9b4f1d3_add_job_correlation_id.py  20260714_0100-a1b2c3d4e5f6_add_job_trace_context.py  20260715_1206-0155a5c468e3_add_signal_intelligence_records.py  20260717_0900-b2c3d4e5f6a7_add_scout_schedules.py  20260718_1144-4945b98229e6_add_opportunity_feedback.py  20260720_1259-98289430a3ec_add_workspace_capability_overrides.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/audit/: models.py  routes.py  service.py
apps/api/app/auth/: dependencies.py  routes.py  schemas.py  service.py
apps/api/app/brands/: models.py  routes.py  schemas.py  service.py
apps/api/app/campaign_context/: models.py  routes.py  schemas.py
apps/api/app/capabilities/: __init__.py  errors.py  models.py  registry.py  resolver.py  results.py  service.py
apps/api/app/claims/: engine.py
apps/api/app/connectors/: __init__.py  base.py  content.py  feedstate.py  live.py  policy.py  registry.py  (+6 more)
(+412 files in other folders)
