[project]
name = "signalnest-api"
version = "0.1.0"
description = "SignalNest authoritative FastAPI backend (modular monolith)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.optional-dependencies]
full = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "redis>=5.0",
    "boto3>=1.34",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Alembic autogenerates migrations with long, densely-packed op calls; only the
# line-length rule is relaxed there (import/unused/logic rules still apply).
"alembic/versions/*.py" = ["E501"]
